[gd_scene load_steps=3 format=3 uid="uid://gm7sgs0yiama"]

[ext_resource type="Material" uid="uid://c42peicxtt1lx" path="res://Shaders/white.tres" id="1_sk3mw"]
[ext_resource type="Script" path="res://Components/damage_component.gd" id="2_ansbn"]

[node name="DamageComponent" type="Node2D"]
material = ExtResource("1_sk3mw")
script = ExtResource("2_ansbn")

[node name="ImmunityTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="HitflashTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="ImmunityTimer" to="." method="_on_immunity_timer_timeout"]
[connection signal="timeout" from="HitflashTimer" to="." method="_on_hitflash_timer_timeout"]
